chore: added in fastlegeinformasjonEksport api
